@@ -72,7 +72,7 @@ directory of the Apache distribution. Change into this directory.
   an additional library required by an optional module) you might need
   to edit one or more of the following options in the
   <CODE>Configuration</CODE> file:
-    <CODE>EXTRA_CFLAGS, LIBS, LFLAGS, INCLUDES</CODE>.
+    <CODE>EXTRA_CFLAGS, LIBS, LDFLAGS, INCLUDES</CODE>.
   <P>
 
   Run the <CODE>Configure</CODE> script:
