@@ -349,7 +349,7 @@ depending on the speed with which the hostname lookups occur.<p>
 Yes. Just build Apache with the rule <code>SOCKS4=yes</code> in your
 <i>Configuration</i> file, and follow the instructions there. SOCKS5 
 capability can be added in a similar way (there's no <code>SOCKS5</code>
-rule yet), so use the <code>EXTRA_LFLAGS</code> definition, or build Apache
+rule yet), so use the <code>EXTRA_LDFLAGS</code> definition, or build Apache
 normally and run it with the <i>runsocks</i> wrapper provided with SOCKS5,
 if your OS supports dynamically linked libraries.<p>
 
