@@ -42,7 +42,7 @@
 # the C compiler, and set OPTIM to '-O2'
 #
 EXTRA_CFLAGS=
-EXTRA_LFLAGS=
+EXTRA_LDFLAGS=
 EXTRA_LIBS=
 EXTRA_INCLUDES=
 
