@@ -1,5 +1,9 @@
 Changes with Apache 1.3
-  
+
+  *) EXTRA_LFLAGS was changed to EXTRA_LDFLAGS (and LFLAGS was changed
+     to LDFLAGS) to avoid complications with lex rules in make files.
+     [Dean Gaudet] PR#372
+
   *) run_method optimized to avoid needless scanning over NULLs in the
      module list.  [Dean Gaudet]
   
